--- a/contactUs/style.css
+++ b/contactUs/style.css
@@ -7,7 +7,7 @@
 .container{
     width: 100%;
     height: 100vh;
-    background-color:rgb(154, 158, 183);
+    background-color: #95bfb18f;
     display: flex;
     align-items: center;
     justify-content: center;
